welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:7: error: not found: value color
  dessinFleur(color.cyan)
              ^FlowerPot:13: error: not found: value color
  dessinFleur(color.orange)
              ^FlowerPot:18: error: not found: value color
  dessinFleur(color.pink)
              ^FlowerPot:20: error: not found: value color
  dessinFleur(color.green)
              ^FlowerPot:37: error: not found: value color
  setCouleurBrosse(color.yellow)
                   ^