welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlower()
{
  droite()
  avance()
  dessinFleur(Color.red)
  avance(4)
  dessinFleur(color.cyan)
  recule(4)
  droite()
  avance(2)
  gauche()
  avance(2)
  dessinFleur(color.orange)
  recule(2)
  droite()
  avance(2)
  gauche()
  dessinFleur(color.pink)
  avance(4)
  dessinFleur(color.green)
	recule(4)
}



def dessinFleur(c:Color)
{
  setCouleurBrosse(c)
  baisseBrosse()
  avance(2)
  recule()
  gauche()
  avance()
  recule(2)
  avance()
  leveBrosse()
  setCouleurBrosse(color.yellow)
  baisseBrosse()
  leveBrosse()
  droite()
  recule()
}